--- a/k8s/cdAgentRole.yaml
+++ b/k8s/cdAgentRole.yaml
@@ -36,7 +36,7 @@ rules:
       - list
       - watch
   - apiGroups: ["apps"]
-    resources: ["deployments"]
+    resources: ["deployments", "replicasets"]
     verbs: ["create","delete","get","list","patch","update","watch"]
   - apiGroups: [""]
     resources: ["services"]
