--- a/ci/values.yaml
+++ b/ci/values.yaml
@@ -38,9 +38,23 @@ Persistence:
 Hibernation:
   Enabled: true
 
+## Install Default RBAC roles and bindings
 rbac:
-  install:true
+  # rbac.install -- Install `role`/`rolebindings`/`serviceAccount`.
+  # If false (and rbac is enabled in the cluster anyway), provide valid names for all service accounts.
+  install: true
+
+  # rbac.installCluster -- Install `clusterrole`/`clusterrolebinding`
+  # These cluster roles are optional but prevent usage of some features, so we recommend setting them up.
+  # Defaults to true, except on Openshift 3 where it defaults to false
+  # Please refer to templates/cjoc-clusterrole-master-management.yaml in the chart
+  #installCluster: true
+
+  # rbac.serviceAccountName -- Name of the service account Operations Center will run as
   serviceAccountName: cjoc
+  # rbac.masterServiceAccountName -- Name of the service account Jenkins masters will run as
   masterServiceAccountName: jenkins
-  agentsServiceAccountName: jenkins-agent
+  # rbac.agentServiceAccountName -- Name of the service account Jenkins agents will run as
+  agentsServiceAccountName: jenkins-agents
+  # rbac.hibernationMonitorServiceAccountName -- Name of the service account the Hibernation monitor will run as (if enabled)
   hibernationMonitorServiceAccountName: managed-master-hibernation-monitor
