--- a/cert-manager/issuers.yaml
+++ b/cert-manager/issuers.yaml
@@ -1,6 +1,22 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
+  name: letsencrypt-staging
+spec:
+  acme:
+    email: REPLACE_EMAIL
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: staging-issuer-account-key
+    solvers:
+      - http01:
+          ingress:
+            ingressClassName: nginx
+
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
   name: letsencrypt-prod
 spec:
   acme:
